--- a/src/css/app.css
+++ b/src/css/app.css
@@ -19,7 +19,7 @@
 }
 
 .q-toolbar {
-  background-color: black;
+  background-color: rgb(0, 0, 0);
   border-radius: 4px;
 }
 
@@ -68,3 +68,8 @@
   font-weight: bold;
 }
 
+.avatar-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
