--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,37 +1,75 @@
 /* app global css */
+* {
+  color: white;
+  font-family: Verdana, sans-serif;
+}
+
+body {
+  background-color: rgb(55, 51, 51);
+  animation: stars 50s ease-in-out infinite;
+}
+
+@keyframes stars {
+  0% {
+    background-position: 0px 0px, 0px 0px, 0px 0px;
+  }
+  50% {
+    background-position: 500px 1000px, -500px -2000px, 1000px -500px;
+  }
+  100% {
+    background-position: 1000px 2000px, -1000px -4000px, 2000px -1000px;
+  }
+}
+
 .q-table {
-  background-color: yellow ;
+  background-color: #322f29;
 }
 
 .post-body {
-  background-color:floralwhite;
+  background-color: #41413f;
   width: 90%;
-  height:50%;
+  height: 50%;
   overflow-y: hidden;
 }
 
+.q-list {
+}
+
 .title-render {
-  background-color: aquamarine;
+  background: linear-gradient(to right, #3f3c3b, #292927);
+  color: #414a4c;
 }
 
 .body-render {
-  background-color: brown ;
+  background: linear-gradient(to right, #332f2f, #454341);
+  color: white;
+  font-size: 1.5rem;
 }
 
 .q-toolbar {
-  background-color: rgb(0, 0, 0);
+  background: linear-gradient(to right, #000000, #282423);
   border-radius: 4px;
 }
 
-.search-bar{
-  border-radius: 20px;
-  border-color: black;
+.search-bar {
+  border-radius: 10px;
+  border-color: #b37812;
   padding-left: 10%;
+  background: linear-gradient(to right, #0a0a0a, #414a4c);
+  color: white;
+}
+.q-field__native, .q-field__prefix, .q-field__suffix, .q-field__input {
+  color: white;
 }
 
 .btn-nav {
-  background-color: darkgray;
+  background: linear-gradient(to right, #8bbabb, #414a4c);
+  color: #414a4c;
+}
 
+.btn-nav:hover {
+  background: linear-gradient(to right, #ffb347, #ffcc33);
+  color: white;
 }
 
 /* Layout */
@@ -43,13 +81,25 @@
 
 @media only screen and (min-width: 768px) {
   .q-matrix {
-    grid-template-columns: repeat(3, minmax(300px, 1fr));
+    grid-template-columns: repeat(4, minmax(300px, 1fr));
   }
 }
 
 /* Post cards */
 .q-card {
   cursor: pointer;
+  background: linear-gradient(to bottom, #000000, #302e29);
+  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
+  transition: box-shadow 0.2s ease-in-out;
+  position: relative;
+  z-index: 0;
+  border-radius: 10%;
+  display: flex;
+  flex-direction: column;
+}
+
+.q-card:hover {
+  box-shadow: 0px 10px 10px rgba(255, 255, 255, 0.5);
 }
 
 .q-card img {
@@ -62,14 +112,70 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  text-emphasis-color: yellow;
+  flex-grow: 1;
 }
 
 .q-item-label[header] {
   font-weight: bold;
+  color: white;
 }
-
+.q-item__label--caption {
+  color: rgb(226, 188, 62);
+}
 .avatar-img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+/* Gradient backgrounds */
+.q-header {
+  background: linear-gradient(to right, #080807, #67635b);
+}
+
+.q-drawer {
+  background: linear-gradient(to right, #3c3a37, #23201a);
+}
+
+.essential-link:hover {
+  background: linear-gradient(to right, #d3d3ca, #21201d);
+  color: white;
+}
+
+.avatar-overlay {
+  position: relative;
+  margin-top: -50px; /* Adjust this value to achieve the desired overlap */
+  z-index: 1;
+  box-shadow: 0 0 10px 3px rgba(4, 3, 2, 0.5); /* Add a golden glow */
+}
+
+.post-author {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.post-author img {
+  width: 3rem;
+  height: 3rem;
+  object-fit: cover;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+
+.post-author-name {
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #414a4c;
+}
+
+.post-date {
+  font-size: 0.8rem;
+  color: #414a4c;
+  margin-left: auto;
+}
+
+.post-content {
+  margin-top: 10px;
 }
