--- a/src/css/app.css
+++ b/src/css/app.css
@@ -3,6 +3,15 @@
   color: white;
   font-family: Verdana, sans-serif;
 }
+h1 {
+  font-size: 1.8rem;
+  font-weight: bold;
+  font-family:sans-serif
+}
+
+h2 {
+  font-size: 1.6rem;
+}
 
 body {
   background-color: rgb(55, 51, 51);
@@ -30,9 +39,6 @@ body {
   width: 90%;
   height: 50%;
   overflow-y: hidden;
-}
-
-.q-list {
 }
 
 .title-render {
@@ -96,11 +102,15 @@ body {
   border-radius: 10%;
   display: flex;
   flex-direction: column;
+  height: 300px; /* Set a fixed height for the card */
+  transition: transform 0.2s ease-in-out;
 }
 
 .q-card:hover {
-  box-shadow: 0px 10px 10px rgba(255, 255, 255, 0.5);
+  transform: translateY(-10px);
+  box-shadow: 0px 6px 8px rgba(12, 255, 251, 0.5);
 }
+
 
 .q-card img {
   width: 100%;
@@ -110,10 +120,10 @@ body {
 
 .q-card-section {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: flex-start;
+  justify-content: space-between; /* Aligns items to the start and end of the container */
   text-emphasis-color: yellow;
-  flex-grow: 1;
 }
 
 .q-item-label[header] {
@@ -127,6 +137,10 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.avatar-pro {
+  width: 5px;
 }
 
 /* Gradient backgrounds */
@@ -179,3 +193,45 @@ body {
 .post-content {
   margin-top: 10px;
 }
+
+.input{
+  color: white;
+}
+
+.profile-nav {
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05), 0 2px 2px rgba(0, 0, 0, 0.05),
+              0 4px 4px rgba(0, 0, 0, 0.05), 0 8px 8px rgba(0, 0, 0, 0.05);
+}
+
+.banner {
+  border-radius: 10px;
+}
+
+.profile-page .avatar-img {
+  width: 1200px !important;
+  height: 150px !important;
+  object-fit: cover !important;
+}
+
+.q-dialog-container--modal-blur .q-page {
+  filter: blur(100px);
+}
+
+.q-dialog-container--modal-blur .q-page:after {
+  content: "";
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 1);
+  z-index: -1;
+}
+
+.q-card__section img {
+  max-width: 80%;
+  max-height: 40vh;
+  margin: 10px auto;
+  display: block;
+}
+
