--- a/src/css/app.css
+++ b/src/css/app.css
@@ -83,6 +83,7 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 16px;
+  padding: 10px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -226,3 +227,22 @@ body {
   display: block;
 }
 
+.post-card-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+
+}
+
+.post-card-section > * {
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+.custom-truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
